--- a/templates/result.html
+++ b/templates/result.html
@@ -9,11 +9,12 @@
 <body>
     <h1>結果発表</h1>
     <p>あなたの回答した「{{ answer }}」は</p>
-    <h2>{{ comment }}</h2>
-    <p>です！</p>
+    <h2>{{ result }}</h2>
     {% if answer != colect %}
     <p>正解は</p>
-    <h2>{{ colect }}</h2>
+    <h2>「{{ colect }}」</h2>
+    <p>です！</p>
+    {% else %}
     <p>です！</p>
     {% endif %}
     <p><a href='/'>出題に戻る</a></p>
