--- a/templates/result.html
+++ b/templates/result.html
@@ -1,22 +1,16 @@
-<!DOCTYPE html>
-<html lang="ja">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
+{% extends 'base.html' %}
+{% block body %}
+<div class="top-wrapper">
     <h1>結果発表</h1>
-    <p>あなたの回答した「{{ answer }}」は</p>
+    <span>あなたの回答した「{{ answer }}」は</span>
     <h2>{{ result }}</h2>
     {% if answer != colect %}
-    <p>正解は</p>
+    <span>正解は</span>
     <h2>「{{ colect }}」</h2>
-    <p>です！</p>
+    <span>残念！！</span>
     {% else %}
-    <p>です！</p>
+    <span>素晴らしい！！</span>
     {% endif %}
     <p><a href='/'>出題に戻る</a></p>
-</body>
-</html>
+</div>
+{% endblock %}
