--- a/templates/index.html
+++ b/templates/index.html
@@ -1,26 +1,20 @@
-<!DOCTYPE html>
-<html lang="ja">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
+{% extends 'base.html' %}
+{% block body %}
+<div class="top-wrapper">
     <h1>駅名読み問題</h1>
     {% for station in station %}
-    <h2>{{ station.name }}</h2>
-    この駅名は何と読む？<br>ひらがなで入力して下さい
+    <h2>「{{ station.name }}」</h2>
+    <span>この駅名は何と読む？<br>ひらがなで入力して下さい</span>
     {% if station.place != "" %}
     <br>（{{ station.place }}にある駅です）
     {% endif %}
+    <div>
     <form action="/check" method="post">
-    <p>
         <input type="hidden" name="colect" value={{station.yomi}}>
         <input type="text" name="answer"><br>
         <input type="submit" name="submit" value="結果確認">
-    </p>
     </form>
+    </div>
     {% endfor %}
-</body>
-</html>
+</div>
+{% endblock %}
