--- a/templates/index.html
+++ b/templates/index.html
@@ -4,10 +4,8 @@
     <h1>駅名読み問題</h1>
     {% for station in station %}
     <h2>「{{ station.name }}」</h2>
-    <span>この駅名は何と読む？<br>ひらがなで入力して下さい(カタカナはそのままで)</span>
-    {% if station.place != "" %}
-    <br>（{{ station.place }}にある駅です）
-    {% endif %}
+    <span>{{ station.pref }}にあるこの駅名は何と読む？<br>ひらがなで入力して下さい(カタカナはそのままで)</span>
+    <br>（{{ station.linename }}にある駅です）
     <div>
     <form action="/check" method="post">
         <input type="hidden" name="colect" value={{station.yomi}}>
